--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 <section class="section">
   <h2>Seu conserto de confiança na Baixada Santista</h2>
-  <p>Atendimento rápido em <strong>Praia Grande, Santos, São Vicente, Cubatão e Guarujá</strong>.</p>
+  <p>Atendimento rápido em <strong>Praia Grande e Região.</strong>.</p>
 </section>
 
 <section class="section">
