--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 </section>
 
 <footer>
-  © 2025 Vicen-tecmaq - Felipe | Praia Grande - SP<br>
-  Desenvolvido com 💻 por Felipe (PHP | Laravel | Eletrônica)
+  © 2025 Vicen-tecmaq - Praia Grande - SP<br>
+  Desenvolvido com 💻 por Felipe 
 </footer>
 
 </body>
