--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Conserto de Máquinas de Lavar | Vicen-tecmaq</title>
+  <title>Conserto de Máquinas e Marido de Aluguel | Vicen-tecmaq</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -85,7 +85,7 @@
 <body>
 
 <header>
-  <h1>⚙️ Vicen-tecmaq: Conserto de Máquinas de Lavar</h1>
+  <h1>⚙️ Vicen-tecmaq: Máquinas de Lavar & Marido de Aluguel</h1>
   <div class="cta-buttons">
     <a href="https://wa.me/5513998015286">💬 WhatsApp</a>
     <a href="tel:+5513998015286" class="tel-btn">📞 Ligar</a>
@@ -93,14 +93,15 @@
 </header>
 
 <section class="section">
-  <h2>Seu conserto de confiança na Baixada Santista</h2>
-  <p>Atendimento rápido em <strong>Praia Grande, Santos , Mongaguá , São Vicente, Itanhaém.</strong>.</p>
+  <h2>Seu técnico de confiança na Baixada Santista</h2>
+  <p>Atendimento rápido em <strong>Praia Grande, Santos, Mongaguá, São Vicente, Itanhaém</strong>.</p>
 </section>
 
 <section class="section">
   <h2>Por que escolher a Vicen-tecmaq?</h2>
   <ul class="benefits">
     <li>🔧 Especialista Brastemp, Consul e Electrolux</li>
+    <li>🛠 Também realizamos serviços de marido de aluguel (instalações, pequenos reparos, etc.)</li>
     <li>⏱ Atendimento rápido e pontual</li>
     <li>📍 Atendemos no seu endereço</li>
     <li>💰 Preço justo com qualidade garantida</li>
