--- a/index.html
+++ b/index.html
@@ -2,125 +2,74 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Conserto de Máquinas e Marido de Aluguel | Vicen-tecmaq</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Conserto de Máquina de Lavar na Baixada Santista - Vicen-tecmaq</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
       background: #f9f9f9;
-      color: #333;
+      margin: 0;
+      padding: 0;
+      text-align: center;
     }
-
     header {
       background: #007bff;
       color: white;
       padding: 20px;
-      text-align: center;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
     }
-
-    header h1 {
-      margin: 0;
-      font-size: 22px;
-    }
-
-    .cta-buttons {
-      margin-top: 10px;
-    }
-
-    .cta-buttons a {
+    .btn {
       display: inline-block;
-      background-color: #25D366;
+      margin: 10px;
+      padding: 12px 20px;
       color: white;
-      padding: 10px 16px;
-      border-radius: 6px;
-      margin: 5px;
+      background: #28a745;
       text-decoration: none;
-      font-weight: bold;
+      border-radius: 5px;
+      font-size: 16px;
     }
-
-    .tel-btn {
-      background-color: #2196F3;
+    .btn.call {
+      background: #dc3545;
     }
-
-    .section {
+    .container {
       padding: 20px;
-      text-align: center;
+      max-width: 800px;
+      margin: auto;
     }
-
-    .section h2 {
-      color: #007bff;
-    }
-
-    .benefits {
+    ul {
       text-align: left;
-      max-width: 600px;
-      margin: 0 auto;
-    }
-
-    .benefits li {
-      margin-bottom: 10px;
-      font-size: 18px;
-    }
-
-    footer {
-      background: #eee;
-      padding: 10px;
-      text-align: center;
-      font-size: 14px;
-    }
-
-    @media (max-width: 600px) {
-      .cta-buttons a {
-        display: block;
-        margin: 10px auto;
-        width: 90%;
-      }
+      display: inline-block;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>⚙️ Vicen-tecmaq: Máquinas de Lavar & Marido de Aluguel</h1>
-  <div class="cta-buttons">
-    <a href="https://wa.me/5513998015286">💬 WhatsApp</a>
-    <a href="tel:+5513998015286" class="tel-btn">📞 Ligar</a>
+  <header>
+    <h1>🔧 Conserto de Máquina de Lavar – Baixada Santista</h1>
+    <p>Atendimento rápido em <strong>Praia Grande, Santos, São Vicente, Mongaguá, Itanhaém</strong></p>
+    <a class="btn" href="https://wa.me/5513998015286" target="_blank">✅ Agendar no WhatsApp</a>
+    <a class="btn call" href="tel:+5513998015286">📞 Ligar Agora</a>
+    <p><strong>Promoção:</strong> Chame pelo WhatsApp e ganhe <u>desconto na primeira visita!</u></p>
+  </header>
+
+  <div class="container">
+    <h2>Por que escolher a Vicen-tecmaq?</h2>
+    <ul>
+      <li>🔧 Especialista em <strong>Brastemp, Consul e Electrolux</strong></li>
+      <li>🛠️ Também realizamos serviços de <strong>marido de aluguel</strong></li>
+      <li>⏱️ Atendimento <strong>rápido e pontual</strong></li>
+      <li>📍 Atendimento <strong>na sua casa</strong></li>
+      <li>💰 <strong>Preço justo</strong> com qualidade garantida</li>
+      <li>💬 Suporte rápido via WhatsApp e telefone</li>
+    </ul>
+
+    <h2>💡 Está com problema na sua lavadora?</h2>
+    <p><strong>Chame agora</strong> e receba atendimento no mesmo dia (sujeito à disponibilidade).</p>
+    <p>Seu técnico de confiança na <strong>Baixada Santista</strong>.</p>
+
+    <a class="btn" href="https://wa.me/5513998015286" target="_blank">✅ Fale agora no WhatsApp</a>
+    <a class="btn call" href="tel:+5513998015286">📞 Ligue para o técnico</a>
   </div>
-</header>
-
-<section class="section">
-  <h2>Seu técnico de confiança na Baixada Santista</h2>
-  <p>Atendimento rápido em <strong>Praia Grande, Santos, Mongaguá, São Vicente, Itanhaém</strong>.</p>
-</section>
-
-<section class="section">
-  <h2>Por que escolher a Vicen-tecmaq?</h2>
-  <ul class="benefits">
-    <li>🔧 Especialista Brastemp, Consul e Electrolux</li>
-    <li>🛠 Também realizamos serviços de marido de aluguel (instalações, pequenos reparos, etc.)</li>
-    <li>⏱ Atendimento rápido e pontual</li>
-    <li>📍 Atendemos no seu endereço</li>
-    <li>💰 Preço justo com qualidade garantida</li>
-    <li>📱 Suporte via WhatsApp e telefone</li>
-  </ul>
-</section>
-
-<section class="section">
-  <h2>Fale agora com o técnico</h2>
-  <div class="cta-buttons">
-    <a href="https://wa.me/5513998015286">✅ Agendar pelo WhatsApp</a>
-    <a href="tel:+5513998015286" class="tel-btn">📞 Ligar Agora</a>
-  </div>
-</section>
-
-<footer>
-  © 2025 Vicen-tecmaq - Praia Grande - SP<br>
-  Desenvolvido com 💻 por Felipe 
-</footer>
 
 </body>
 </html>
