--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
@@ -73,3 +73,133 @@
 
 </body>
 </html>
+ -->
+
+
+
+
+
+
+<!-- Site novo
+
+-->
+
+
+
+ <!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vicen-tecmaq - Conserto de Máquinas e Marido de Aluguel</title>
+    <!-- Inclui o Tailwind CSS para estilização rápida e responsiva -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #f0f4f8; /* Cor de fundo suave */
+        }
+    </style>
+</head>
+<body class="antialiased">
+
+    <!-- Seção de Cabeçalho (Header) -->
+    <header class="bg-gray-900 text-white p-4">
+        <div class="container mx-auto flex flex-col sm:flex-row items-center justify-between">
+            <h1 class="text-2xl font-bold mb-2 sm:mb-0">Vicen-tecmaq</h1>
+            <nav class="flex space-x-4">
+                <a href="https://wa.me/5513998015286" class="bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-4 rounded-full shadow-lg transition-transform transform hover:scale-105">
+                    Agendar no WhatsApp
+                </a>
+                <a href="tel:+5513998015286" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-full shadow-lg transition-transform transform hover:scale-105">
+                    Ligar Agora
+                </a>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Seção de Destaque (Hero) com Imagem -->
+    <main class="container mx-auto px-4 py-8">
+        <section class="bg-white rounded-xl shadow-lg p-6 md:p-10 mb-8">
+            <div class="flex flex-col md:flex-row items-center justify-center space-y-6 md:space-y-0 md:space-x-10">
+                <div class="md:w-1/2 text-center md:text-left">
+                    <h2 class="text-3xl sm:text-4xl font-extrabold text-gray-800 mb-4">
+                        Conserto Rápido de Máquinas e Serviços de Marido de Aluguel
+                    </h2>
+                    <p class="text-lg text-gray-600 mb-6">
+                        Especialista em linha branca e pequenos reparos. Atendimento a domicílio na Baixada Santista.
+                    </p>
+                    <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4 justify-center md:justify-start">
+                        <a href="https://wa.me/5513998015286" class="bg-green-500 hover:bg-green-600 text-white font-semibold py-3 px-6 rounded-full shadow-lg transition-transform transform hover:scale-105">
+                            Agendar no WhatsApp
+                        </a>
+                        <a href="tel:+5513998015286" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-3 px-6 rounded-full shadow-lg transition-transform transform hover:scale-105">
+                            Ligar Agora
+                        </a>
+                    </div>
+                </div>
+                <div class="md:w-1/2 w-full">
+                    <!-- Placeholder de Imagem para Conserto de Máquina de Lavar -->
+                    <img src="fab.png" alt="Técnico consertando uma máquina de lavar" class="rounded-lg shadow-lg">
+                </div>
+            </div>
+        </section>
+
+        <!-- Seção de Prova Social (Depoimentos) - NOVO -->
+        <section class="bg-white rounded-xl shadow-lg p-6 md:p-10 mb-8 text-center">
+            <h2 class="text-3xl font-bold text-gray-800 mb-6">O que nossos clientes dizem</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                <!-- Depoimento 1 -->
+                <div class="bg-gray-100 p-6 rounded-lg shadow-md transition-transform transform hover:scale-105">
+                    <p class="text-gray-700 italic mb-4">"Atendimento rápido e super profissional! Minha geladeira parou e ele consertou no mesmo dia. Recomendo de olhos fechados!"</p>
+                    <p class="font-semibold text-gray-900">- Ana P., Itanhaém</p>
+                </div>
+                <!-- Depoimento 2 -->
+                <div class="bg-gray-100 p-6 rounded-lg shadow-md transition-transform transform hover:scale-105">
+                    <p class="text-gray-700 italic mb-4">"Achei o serviço pelo Google e fiquei surpreso com a qualidade. Preço justo e trabalho impecável na minha máquina de lavar."</p>
+                    <p class="font-semibold text-gray-900">- Carlos M., Praia Grande</p>
+                </div>
+                <!-- Depoimento 3 -->
+                <div class="bg-gray-100 p-6 rounded-lg shadow-md transition-transform transform hover:scale-105">
+                    <p class="text-gray-700 italic mb-4">"Precisei de um pequeno reparo elétrico e o atendimento foi excelente. Profissional muito educado e competente."</p>
+                    <p class="font-semibold text-gray-900">- Fernanda S., Mongaguá</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Seção de Detalhes dos Serviços - NOVO -->
+        <section class="bg-white rounded-xl shadow-lg p-6 md:p-10 mb-8">
+            <h2 class="text-3xl font-bold text-gray-800 text-center mb-6">Nossos Serviços</h2>
+            <div class="flex flex-col md:flex-row items-start space-y-8 md:space-y-0 md:space-x-10">
+                <div class="md:w-1/2">
+                    <h3 class="text-2xl font-semibold mb-4 text-gray-800">Conserto de Linha Branca</h3>
+                    <ul class="list-disc list-inside space-y-2 text-gray-700">
+                        <li>Máquinas de Lavar  (Consul, Brastemp, Electrolux)</li>
+                        <li>Manutenção preventiva e corretiva</li>
+                    </ul>
+                </div>
+                <div class="md:w-1/2">
+                    <h3 class="text-2xl font-semibold mb-4 text-gray-800">Pequenos Reparos (Marido de Aluguel)</h3>
+                    <ul class="list-disc list-inside space-y-2 text-gray-700">
+                        <li>Reparos e instalações elétricas (tomadas, lâmpadas, ventiladores de teto)</li>
+                        <li>Reparos e instalações hidráulicas (torneiras, chuveiros, vazamentos)</li>
+                        <li>Montagem de móveis e prateleiras</li>
+                        <li>Instalação de cortinas, varais e quadros</li>
+                        <li>Consertos em geral para sua casa ou escritório</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+    <!-- Rodapé (Footer) -->
+    <footer class="bg-gray-900 text-white p-6 text-center">
+        <div class="container mx-auto">
+            <p>&copy; 2024 Vicen-tecmaq. Todos os direitos reservados.</p>
+            <p class="mt-2">Atendimento em Itanhaém, Mongaguá e Praia Grande.</p>
+        </div>
+    </footer>
