--- a/index.html
+++ b/index.html
@@ -111,9 +111,24 @@
         <div class="container mx-auto flex flex-col sm:flex-row items-center justify-between">
             <h1 class="text-2xl font-bold mb-2 sm:mb-0">Vicen-tecmaq</h1>
             <nav class="flex space-x-4">
-                <a href="https://wa.me/5513998015286" class="bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-4 rounded-full shadow-lg transition-transform transform hover:scale-105">
+<!--                 <a href="https://wa.me/5513998015286" class="bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-4 rounded-full shadow-lg transition-transform transform hover:scale-105">
                     Agendar no WhatsApp
-                </a>
+                </a> -->
+
+               <a href="https://wa.me/5513998015286" 
+       class="flex items-center justify-center bg-green-500 hover:bg-green-600 text-white font-semibold py-3 px-6 rounded-full shadow-lg transition-transform transform hover:scale-105">
+        <!-- Ícone WhatsApp -->
+        <svg xmlns="http://www.w3.org/2000/svg" 
+             class="w-5 h-5 mr-2" 
+             fill="none" 
+             viewBox="0 0 24 24" 
+             stroke="currentColor" 
+             stroke-width="2">
+            <path d="M16.988 13.508c-.28-.14-1.647-.809-1.902-.9-.254-.093-.44-.14-.627.14-.187.28-.72.899-.882 1.087-.16.187-.326.21-.606.07-.28-.14-1.184-.436-2.255-1.393-.833-.743-1.394-1.66-1.554-1.94-.16-.28-.017-.432.122-.572.126-.126.28-.326.42-.487.14-.16.187-.28.28-.466.093-.187.047-.35-.023-.487-.07-.14-.627-1.507-.86-2.066-.226-.54-.456-.467-.627-.475-.162-.007-.35-.009-.536-.009a1.036 1.036 0 00-.747.35c-.26.28-.98.956-.98 2.334s1.003 2.71 1.144 2.897c.14.187 1.975 3.016 4.787 4.23.669.288 1.192.46 1.6.588.672.214 1.285.183 1.77.111.54-.08 1.647-.673 1.879-1.323.233-.65.233-1.207.163-1.323-.07-.116-.254-.187-.534-.327z"/>
+            <path d="M20.52 3.48C18.24 1.2 15.24 0 12 0S5.76 1.2 3.48 3.48C1.2 5.76 0 8.76 0 12c0 2.04.54 4.02 1.56 5.76L0 24l6.36-1.56A11.94 11.94 0 0012 24c3.24 0 6.24-1.2 8.52-3.48C22.8 18.24 24 15.24 24 12c0-3.24-1.2-6.24-3.48-8.52z"/>
+        </svg>
+        Agendar no WhatsApp
+    </a>
                 <a href="tel:+5513998015286" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-full shadow-lg transition-transform transform hover:scale-105">
                     Ligar Agora
                 </a>
