--- a/index.html
+++ b/index.html
@@ -129,9 +129,22 @@
         </svg>
         Agendar no WhatsApp
     </a>
-                <a href="tel:+5513998015286" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-full shadow-lg transition-transform transform hover:scale-105">
+<!--                 <a href="tel:+5513998015286" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-full shadow-lg transition-transform transform hover:scale-105">
                     Ligar Agora
-                </a>
+                </a> -->
+                <a href="tel:+5513998015286" 
+       class="flex items-center justify-center bg-blue-500 hover:bg-blue-600 text-white font-semibold py-3 px-6 rounded-full shadow-lg transition-transform transform hover:scale-105">
+        <!-- Ícone Telefone -->
+        <svg xmlns="http://www.w3.org/2000/svg" 
+             class="w-5 h-5 mr-2" 
+             fill="none" 
+             viewBox="0 0 24 24" 
+             stroke="currentColor" 
+             stroke-width="2">
+            <path d="M22 16.92v3a2 2 0 01-2.18 2A19.79 19.79 0 013 5.18 2 2 0 015 3h3a2 2 0 012 1.72c.12.81.37 1.6.72 2.33a2 2 0 01-.45 2.18L9.09 10.91a16 16 0 006 6l1.68-1.68a2 2 0 012.18-.45c.73.35 1.52.6 2.33.72A2 2 0 0122 16.92z"/>
+        </svg>
+        Ligar Agora
+    </a>
             </nav>
         </div>
     </header>
