Integrate Google Tag Manager and modify footer content
Added Google Tag Manager and updated footer text.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html lang="pt-BR">
 
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-M7HXPKD8');</script>
+  <!-- End Google Tag Manager -->
+  <!-- JSON-LD Schema for SEO -->
+  <script type="application/ld+json">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -23,9 +35,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-
-  <!-- JSON-LD Schema for SEO -->
-  <script type="application/ld+json">
+  
   {
     "@context": "https://schema.org",
     "@type": "Service",
@@ -771,21 +781,11 @@
 </head>
 
 <body>
-
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M7HXPKD8" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <!-- ========================================
-       HERO SECTION
-       ======================================== -->
-  <section class="hero">
-    <div class="container">
-      <div class="hero-content animate-fade-in">
-        <div class="trust-badge">
-          <span>🔒</span>
-          <span>100% Grátis e Sem Compromisso</span>
-        </div>
-
-        <h1>Sua Máquina de Lavar Quebrou?<br>Descubra o Problema em 5 Minutos</h1>
-
-        <p class="hero-subtitle">
           Diagnóstico <strong>gratuito</strong> e <strong>instantâneo</strong>. Receba a classificação do reparo e
           orçamento direto no WhatsApp. Simples, rápido e sem burocracia.
         </p>
@@ -1068,7 +1068,7 @@
     <div class="container">
       <div class="footer-content">
         <h4>🔧 Diagnóstico Rápido</h4>
-        <p>O Doctoralia das Máquinas de Lavar</p>
+        <p>Máquinas de Lavar</p>
         <p>Conectando pessoas a soluções rápidas e confiáveis</p>
 
         <div class="footer-divider"></div>
