--- a/index.html
+++ b/index.html
@@ -2,18 +2,7 @@
 <html lang="pt-BR">
 
 <head>
-  <!-- Google Tag Manager -->
-  <script>(function (w, d, s, l, i) {
-      w[l] = w[l] || []; w[l].push({
-        'gtm.start':
-          new Date().getTime(), event: 'gtm.js'
-      }); var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-M7HXPKD8');</script>
-  <!-- End Google Tag Manager -->
-  <!-- JSON-LD Schema for SEO -->
-  <script type="application/ld+json">
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -35,23 +24,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-  
-  {
-    "@context": "https://schema.org",
-    "@type": "Service",
-    "name": "Diagnóstico Rápido de Máquina de Lavar",
-    "description": "Serviço gratuito de diagnóstico de problemas em máquinas de lavar com orçamento instantâneo",
-    "provider": {
-      "@type": "LocalBusiness",
-      "name": "Diagnóstico Rápido"
-    },
-    "areaServed": "BR",
-    "availableChannel": {
-      "@type": "ServiceChannel",
-      "serviceUrl": "https://wa.me/5511980375558"
-    }
-  }
-  </script>
+
 
   <style>
     /* ========================================
@@ -785,7 +758,25 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M7HXPKD8" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+
   <!-- ========================================
+       HEADER / HERO
+       ======================================== -->
+  <section class="hero">
+    <div class="container">
+      <div class="hero-content">
+        <div class="trust-badge">
+          <span style="font-size: 1.2em;">🛡️</span> 100% Gratuito e Seguro
+        </div>
+
+        <h1>
+          Sua Máquina de Lavar Quebrou? <br />
+          <span
+            style="color: #a5b4fc; background: linear-gradient(135deg, #a5b4fc 0%, #ffffff 100%); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;">Descubra
+            o Problema Agora</span>
+        </h1>
+
+        <p class="hero-subtitle">
           Diagnóstico <strong>gratuito</strong> e <strong>instantâneo</strong>. Receba a classificação do reparo e
           orçamento direto no WhatsApp. Simples, rápido e sem burocracia.
         </p>
