Revise hero subtitle for improved messaging
Updated the hero subtitle to enhance clarity and precision.

--- a/index.html
+++ b/index.html
@@ -776,9 +776,9 @@
             o Problema Agora</span>
         </h1>
 
-        <p class="hero-subtitle">
-          Diagnóstico <strong>gratuito</strong> e <strong>instantâneo</strong>. Receba a classificação do reparo e
-          orçamento direto no WhatsApp. Simples, rápido e sem burocracia.
+<p class="hero-subtitle">
+          Diagnóstico <strong>técnico e preciso</strong>. Identifique os sintomas, descubra a gravidade e receba a
+          solução direto no WhatsApp.
         </p>
 
         <div class="cta-group">
