--- a/index.html
+++ b/index.html
@@ -768,12 +768,11 @@
         <div class="trust-badge">
           <span style="font-size: 1.2em;">🛡️</span> 100% Gratuito e Seguro
         </div>
-
-        <h1>
-          Sua Máquina de Lavar Quebrou? <br />
+    <h1>
+          Sua Máquina "Adoeceu"? <br />
           <span
-            style="color: #a5b4fc; background: linear-gradient(135deg, #a5b4fc 0%, #ffffff 100%); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;">Descubra
-            o Problema Agora</span>
+            style="color: #a5b4fc; background: linear-gradient(135deg, #a5b4fc 0%, #ffffff 100%); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;">O
+            Doutor Resolve.</span>
         </h1>
 
 <p class="hero-subtitle">
