Update trust badge text in index.html

--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
     <div class="container">
       <div class="hero-content">
         <div class="trust-badge">
-          <span style="font-size: 1.2em;">🛡️</span> 100% Gratuito e Seguro
+          <span style="font-size: 1.2em;">🛡️</span>Orçamento 100% Gratuito e Seguro
         </div>
     <h1>
           Sua Máquina "Adoeceu"? <br />
